force-app/main/default/objects/BoxClientCredentialsGrant__mdt/BoxClientCredentialsGrant__mdt.object-meta.xml
<CustomObject>
    <label>Box Client Credentials Grant</label>
    <pluralLabel>Box Client Credentials Grants</pluralLabel>
</CustomObject>