force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxClientSecret__c.field-meta.xml
<CustomField>
    <fullName>BoxClientSecret__c</fullName>
    <label>Box Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>