force-app/main/default/objects/BoxClientCredentialsGrant__mdt/fields/BoxSubjectType__c.field-meta.xml
<CustomField>
    <fullName>BoxSubjectType__c</fullName>
    <label>Box Subject Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>user</fullName>
                <label>User</label>
            </value>
            <value>
                <fullName>enterprise</fullName>
                <label>Enterprise</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>